app1.yaml
kind: Pod
apiVersion: v1
metadata:
  name: app1
  labels:
    app: app1
spec:
  containers:
    - name: app-1
      image: hashicorp/http-echo
      args:
        - "-text=Hello Application 1"
