app2.yaml
kind: Pod
apiVersion: v1
metadata:
  name: app2
  labels:
    app: app2
spec:
  containers:
    - name: app-2
      image: hashicorp/http-echo
      args:
        - "-text=Hello Application 2"
