app2-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
    - port: 5678 # Default port for image
